# RotatingCubeConsole

./: meson.build
Test/AlgebraTest/: AlgebraTest.cpp  meson.build
inc/: drawer.h  lin_alg.h  shapes.h
src/: drawer.c  lin_alg.c  main.c
